update coming soon text

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <p>
 
         <div class="Apply" style="text-align: center; margin: 0 auto">
-            <div>Coming Soon</div>
+            <div style="letter-spacing: 3px;">Coming 9/10/2013</div>
         </div>
         </p>
     </div>
