--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>SF Entrepreneurship in Residence</title>
+    <title>San Francisco Entrepreneurship-in-Residence</title>
     <meta name="description" content="Apply for the entrepreneurship in residence program with San Francisco and build real solutions for real challenges in government.">
     <meta name="author" content="San Francisco Mayor's Office of Civic Innovation (MOCI)">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
