add in announcement text

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Le styles todo: replace with minified CDN versions -->
-    <link href="css/bootstrap.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="/css/bootstrap.css" rel="stylesheet">
+    <link href="/css/style.css" rel="stylesheet">
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -62,7 +62,7 @@
         <p>
 
         <div class="Apply" style="text-align: center; margin: 0 auto">
-            <div style="letter-spacing: 3px;">Coming 9/10/2013</div>
+            <div style="letter-spacing: 3px;">Coming Soon...<a href="/announce">Read the Announcement</a></div>
         </div>
         </p>
     </div>
@@ -81,12 +81,11 @@
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="//code.jquery.com/jquery.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="js/bootstrap.min.js"></script>
-<script type="text/javascript" src="js/jquery.easing.1.2.js"></script>
-<script type='text/javascript' src='js/jquery.scrollTo-1.4.3.1-min.js'></script>
-<script type='text/javascript' src='js/jquery.localscroll-1.2.7-min.js'></script>
-<script type="text/javascript" src="js/jquery.sticky.js"></script>
-<script type='text/javascript' src='app.js'></script>
+<script src="/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="/js/jquery.easing.1.2.js"></script>
+<script type='text/javascript' src='/js/jquery.scrollTo-1.4.3.1-min.js'></script>
+<script type='text/javascript' src='/js/jquery.localscroll-1.2.7-min.js'></script>
+<script type="text/javascript" src="/js/jquery.sticky.js"></script>
 <script type="text/javascript">
 
     var _gaq = _gaq || [];
