--- a/announce/index.html
+++ b/announce/index.html
@@ -26,14 +26,14 @@
     <div class="container">
         <div class="row" style="width:80%; margin-left: auto; margin-right: auto; padding-top: 40px; font-size: 1.2em; font-weight: bold;">
             <div class="col-sm-4" style="display: inline-block;">
-                <div style="display: inline-block; vertical-align: middle; position: absolute;">Office of the Mayor<br/>
-                City and County of San Francisco</div>
+                <div style="margin-top: 40px;">Office of the Mayor<br/>
+                City & County of San Francisco</div>
             </div>
             <div class="col-sm-4" style="text-align: center;">
                 <img src="/images/CitySeal.png" />
             </div>
             <div class="col-sm-4" style="text-align: right;">
-                Edwin M. Lee
+                <div style="margin-top: 50px;">Edwin M. Lee</div>
             </div>
         </div>
         <div class="row">
