make work for IE7

--- a/index.html
+++ b/index.html
@@ -2,23 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>San Francisco Entrepreneurship-in-Residence</title>
+    <title>San Francisco Entrepreneurship-in-Residence Program</title>
     <meta name="description" content="Apply for the entrepreneurship in residence program with San Francisco and build real solutions for real challenges in government.">
     <meta name="author" content="San Francisco Mayor's Office of Civic Innovation (MOCI)">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Le styles todo: replace with minified CDN versions -->
     <link href="/css/bootstrap.css" rel="stylesheet">
-    <link href="/css/style.css" rel="stylesheet">
-
-    <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
-    <!--[if lt IE 9]>
-    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <!--[if lt IE 8]>
+    <link href="/css/bootstrap-ie7.css" rel="stylesheet">
     <![endif]-->
-
+    <link href="/css/style.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Lato|Montserrat|Fjalla+One' rel='stylesheet' type='text/css'>
     <link rel="icon" type="image/ico" href="images/favicon.ico"/>
 
+    <!--[if lt IE 9]>
+    <script src="/js/html5shiv.js"></script>
+    <script src="/js/respond.min.js"></script>
+    <![endif]-->
 </head>
 
 <body data-spy="scroll" data-target="#main_nav_cont" data-offset="100">
