--- a/announce/index.html
+++ b/announce/index.html
@@ -2,38 +2,39 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>San Francisco Entrepreneurship-in-Residence Press Release</title>
+    <title>San Francisco Entrepreneurship-in-Residence Program Press Release</title>
     <meta name="description" content="Apply for the entrepreneurship in residence program with San Francisco and build real solutions for real challenges in government.">
     <meta name="author" content="San Francisco Mayor's Office of Civic Innovation (MOCI)">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Le styles todo: replace with minified CDN versions -->
     <link href="/css/bootstrap.css" rel="stylesheet">
-    <link href="/css/style.css" rel="stylesheet">
-
-    <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
-    <!--[if lt IE 9]>
-    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <!--[if lt IE 8]>
+    <link href="/css/bootstrap-ie7.css" rel="stylesheet">
     <![endif]-->
-
+    <link href="/css/style.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Lato|Montserrat|Fjalla+One' rel='stylesheet' type='text/css'>
     <link rel="icon" type="image/ico" href="images/favicon.ico"/>
 
+    <!--[if lt IE 9]>
+    <script src="/js/html5shiv.js"></script>
+    <script src="/js/respond.min.js"></script>
+    <![endif]-->
 </head>
 
 <body data-spy="scroll" data-target="#main_nav_cont" data-offset="100">
 <div class="section" style="padding: 15px 0;">
     <div class="container">
         <div class="row" style="width:80%; margin-left: auto; margin-right: auto; padding-top: 40px; font-size: 1.2em; font-weight: bold;">
-            <div class="col-sm-4" style="display: inline-block;">
-                <div style="margin-top: 40px;">Office of the Mayor<br/>
+            <div class="col-sm-4">
+                <div class="office-of-mayor">Office of the Mayor<br/>
                 City & County of San Francisco</div>
             </div>
             <div class="col-sm-4" style="text-align: center;">
                 <img src="/images/CitySeal.png" />
             </div>
-            <div class="col-sm-4" style="text-align: right;">
-                <div style="margin-top: 50px;">Edwin M. Lee</div>
+            <div class="col-sm-4">
+                <div class="mayor-tag-line">Edwin M. Lee</div>
             </div>
         </div>
         <div class="row">
@@ -46,7 +47,7 @@
             <p>The program plans to attract world-class entrepreneurs and technologists by providing them with direct access to government needs and opportunities, staff and their expertise, in addition to product development, ramp-up support, and insights into a gold mine of government problems and opportunities through the City and County of San Francisco.</p>
             <p>“Products and services that successfully solve issues faced by San Francisco can easily expand to addressing similar needs of other cities and states across the nation in addition to the private sector,” said Rahul Mewawalla, a senior executive with leadership experiences across Fortune 500 and high growth companies who is leading the program. “We expect to drive significant innovation and growth in areas of pressing importance such as data, mobile and cloud services, healthcare, education, transportation, energy and infrastructure.”</p>
             <p>San Francisco’s EIR program will offer selected teams mentorship from senior public leaders across the Mayor’s office and San Francisco departments and from private sector leaders with experience at companies such as McKinsey & Company, Nokia, NBC Universal, General Electric, Yahoo!, and Goldman Sachs. The program expects to select 3 to 5 teams and announce the selected teams in early October, during San Francisco’s Innovation Month. The program will run 16 weeks from mid-October, 2013 through mid-February, 2014.</p>
-            <p>Entrepreneurial teams are invited to learn more and apply at http://entrepreneur.sfgov.org</p>
+            <p>Entrepreneurial teams are invited to learn more and apply at <a href="http://entrepreneur.sfgov.org">http://entrepreneur.sfgov.org</a></p>
             </div>
         </div>
         <div class="row" style="text-align: center;">
