--- a/announce/index.html
+++ b/announce/index.html
@@ -25,7 +25,7 @@
 <body data-spy="scroll" data-target="#main_nav_cont" data-offset="100">
 <div class="section" style="padding: 15px 0;">
     <div class="container">
-        <div class="row" style="width:80%; margin-left: auto; margin-right: auto; padding-top: 40px; font-size: 1.2em; font-weight: bold;">
+        <div class="row" style="font-size: 1.2em; font-weight: bold;">
             <div class="col-sm-4">
                 <div class="office-of-mayor">Office of the Mayor<br/>
                 City & County of San Francisco</div>
