--- a/index.html
+++ b/index.html
@@ -87,46 +87,26 @@
 <script type='text/javascript' src='/js/jquery.scrollTo-1.4.3.1-min.js'></script>
 <script type='text/javascript' src='/js/jquery.localscroll-1.2.7-min.js'></script>
 <script type="text/javascript" src="/js/jquery.sticky.js"></script>
-<script type="text/javascript">
+<script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-    var _gaq = _gaq || [];
-    _gaq.push(['_setAccount', 'UA-xxxxx-x']);
-    _gaq.push(['_setDomainName', 'none']);
-    _gaq.push(['_setAllowLinker', true]);
-    _gaq.push(['_trackPageview']);
-
-    (function () {
-        var ga = document.createElement('script');
-        ga.type = 'text/javascript';
-        ga.async = true;
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-        var s = document.getElementsByTagName('script')[0];
-        s.parentNode.insertBefore(ga, s);
-    })();
+    ga('create', 'UA-43780033-1', 'sfgov.org');
+    ga('send', 'pageview');
 
 </script>
 <script type="text/javascript">
-    var _sf_async_config = {uid: 20661, domain: "codeforamerica.org"};
-    (function () {
-        function loadChartbeat() {
-            window._sf_endpt = (new Date()).getTime();
-            var e = document.createElement('script');
-            e.setAttribute('language', 'javascript');
-            e.setAttribute('type', 'text/javascript');
-            e.setAttribute('src',
-                    (("https:" == document.location.protocol) ? "https://a248.e.akamai.net/chartbeat.download.akamai.com/102508/" : "http://static.chartbeat.com/") +
-                            "js/chartbeat.js");
-            document.body.appendChild(e);
-        }
-
-        var oldonload = window.onload;
-        window.onload = (typeof window.onload != 'function') ?
-                loadChartbeat : function () {
-            oldonload();
-            loadChartbeat();
-        };
-    })();
-
+    var $buoop = {vs:{i:6,f:3.6,o:,s:4,n:9}}
+    $buoop.ol = window.onload;
+    window.onload=function(){
+        try {if ($buoop.ol) $buoop.ol();}catch (e) {}
+        var e = document.createElement("script");
+        e.setAttribute("type", "text/javascript");
+        e.setAttribute("src", "http://browser-update.org/update.js");
+        document.body.appendChild(e);
+    }
 </script>
 </body>
 </html>
