initialize files for program

--- a/announce/index.html
+++ b/announce/index.html
@@ -22,7 +22,18 @@
     <![endif]-->
 </head>
 
-<body data-spy="scroll" data-target="#main_nav_cont" data-offset="100">
+<body data-spy="scroll" data-target="#main_nav_cont" data-offset="100" style="margin-top: 90px;">
+<div id="announce-nav-cont" class="navbar navbar-fixed-top">
+    <div class="container">
+        <div>
+            <ul class="nav navbar-nav pull-right">
+                <li><a href="/" style="float: right">&larr; Back to the SF EIR Program</a></li>
+            </ul>
+        </div>
+        <!--/.nav-collapse -->
+    </div>
+</div>
+
 <div class="section" style="padding: 15px 0;">
     <div class="container">
         <div class="row" style="font-size: 1.2em; font-weight: bold;">
