--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div class="container" style="height: 100px; padding-top: 10px;" id="apply">
         <a href="http://www.sfmayor.org" target="_blank"><img src="images/city_seal_white.png" width="80px;" class="img-responsive" style="float:left;"/></a>
         <div class="brand-wrapper">
-            <h1 class="office-brand">The Mayor's Office</h1>
+            <h1 class="office-brand">The Mayor's Office of Civic Innovation</h1>
         </div>
 
     </div>
