--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
     <div class="container" style="height: 100px; padding-top: 10px;" id="apply">
         <a href="http://www.sfmayor.org" target="_blank"><img src="images/city_seal_white.png" width="80px;" class="img-responsive" style="float:left;"/></a>
         <div class="brand-wrapper">
+            <div class="office-brand-lead">
+                An initiative of
+            </div>
             <h1 class="office-brand">The Mayor's Office of Civic Innovation</h1>
         </div>
 
