--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="#apply">Apply</a></li>
+                    <li><a href="#apply">Top</a></li>
                     <li><a href="#overview">Overview</a></li>
                     <li><a href="#program">Program</a></li>
                     <li><a href="#mentors">Mentors</a></li>
