--- a/index.html
+++ b/index.html
@@ -597,9 +597,12 @@
 
 <!-- Footer
      ================================================== -->
-<div id="footer">
+<div id="footer" style="padding: 15px 0;">
     <div class="container">
         <a href="http://www.sfgov.org" target="_blank"><img src="images/city_seal_white.png"/></a>
+    </div>
+    <div style="text-align: center; color: #fff;">
+        The theme for this site developed on top of <a style="color:#fff; text-decoration: underline;" href="https://github.com/codeforamerica/CfA_Accelerator">CfA's Accelerator single site application page</a>. This site is served on <a style="color: #fff; text-decoration: underline;" href="http://pages.github.com/">GitHub pages</a>.
     </div>
 </div>
 
