add copy to site, modify FAQs

--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
                     mentors for four months, and most importantly, access to a gold-mine of government problems and
                     insights
                     through the City and County of San Francisco.</p>
+                <p>The SF EIR program is part of a growing ecosystem of civic innovation.  Inspired by <a href="http://www.codeforamerica.org/accelerator/">Code for America’s Civic Accelerator</a>, and joined by <a href="http://www.pointsoflight.org/civic-incubator/civic-accelerator">Points of Light</a> and <a href="http://tumml.org/">Tumml</a> among others, the EIR program seeks to offer another pathway to addressing civic challenges.  This is not an accelerator or incubator program, but rather a method for the City and County of San Francisco to formally match entrepreneurs working on products that serve or could serve government to various city agencies and departments.  It is our belief that creating a formal pathway can help these entrepreneurs more easily navigate the complexity of working in the public sector and bring better fit solutions to the challenges of government.  We applaud CfA's pioneering work in this space and hope our program spurs more entrepreneurs to work on civic problems.</p>
             </div>
         </div>
     </div>
@@ -445,7 +446,7 @@
 
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
-                <p>Got questions? Here are some answers, and we'll keep adding to the list over time.
+                <p>Please read over the questions below before submitting your application.
                     If your question isn't answered here, reach out via the <a href="#getinvolved">contact form
                         below</a> or
                     <a
@@ -453,7 +454,7 @@
 
                 <h2>Why is the program unique?</h2>
 
-                <p>Entrepreneurs get to work directly with the City and County of San Francisco to develop solutions for actual pain points and needs of the government, the largest consumer of products and services in the nation. In addition, products and services that successfully solve issues faced by San Francisco can easily expand to addressing similar needs of other cities and states across the nation in addition to the private sector.</p>
+                <p>Entrepreneurs get to work directly with the City and County of San Francisco to develop solutions for pain points and needs of the government, the largest consumer of products and services in the nation. In addition, products and services that successfully solve issues faced by San Francisco can easily expand to addressing similar needs of other cities and states across the nation in addition to the private sector.  This is one of the first programs of its kind run by the City itself. This program is not meant to be a traditional accelerator or incubator, but to help formalize the process for smaller businesses and entrepreneurs to navigate the complexity of the public sector.</p>
 
                 <h2>Who is the target entrepreneur?</h2>
 
