clarify embedded FAQ

--- a/index.html
+++ b/index.html
@@ -467,9 +467,9 @@
                         SFOpenBook</a>.
                 </p>
 
-                <h2>Does my team have to spend 16 weeks "embedded" in San Francisco?</h2>
+                <h2>Does my team have to spend 16 weeks "embedded" in San Francisco government offices?</h2>
 
-                <p>It’s up to you. The program is set up to provide a four month runway for you to work with government on developing a product or service that meets the needs of a department or agency and can be applied more broadly. To that end, we work with you to establish a reasonable roadmap over that timeframe. This will vary by team. The best use of that time depends on your team's stage and needs. We want you to be successful and understand that if you're building a business, you'll have to be doing other things as well.
+                <p>While you do not have to be physically in City offices every day, we need companies and teams that are in the Bay Area or are willing to have at least some of the team here during the 16 weeks. The program is set up to provide a four month runway for you to work with government on developing a product or service that meets the needs of a department or agency and can be applied more broadly. To that end, we work with you to establish a reasonable roadmap over that timeframe. This will vary by team. The best use of that time depends on your team's stage and needs. We want you to be successful and understand that if you're building a business, you'll have to be doing other things as well.
                 </p>
 
                 <h2>Is this a full-time or part-time commitment?</h2>
