--- a/index.html
+++ b/index.html
@@ -197,7 +197,6 @@
                     mentors for four months, and most importantly, access to a gold-mine of government problems and
                     insights
                     through the City and County of San Francisco.</p>
-                <p>The SF EIR program is part of a growing ecosystem of civic innovation.  Inspired by <a href="http://www.codeforamerica.org/accelerator/">Code for America’s Civic Accelerator</a>, and joined by <a href="http://www.pointsoflight.org/civic-incubator/civic-accelerator">Points of Light</a> and <a href="http://tumml.org/">Tumml</a> among others, the EIR program seeks to offer another pathway to addressing civic challenges.  This is not an accelerator or incubator program, but rather a method for the City and County of San Francisco to formally match entrepreneurs working on products that serve or could serve government to various city agencies and departments.  It is our belief that creating a formal pathway can help these entrepreneurs more easily navigate the complexity of working in the public sector and bring better fit solutions to the challenges of government.  We applaud CfA's pioneering work in this space and hope our program spurs more entrepreneurs to work on civic problems.</p>
             </div>
         </div>
     </div>
@@ -451,6 +450,10 @@
                         below</a> or
                     <a
                             href="http://twitter.com/sfmoci">@sfmoci</a>), and we'll get back to you shortly.</p>
+
+                <h2>How does the EIR program relate to other civic programs like Code for America's Civic Accelerator?</h2>
+
+                <p>The SF EIR program is part of a growing ecosystem of civic innovation.  Inspired by <a href="http://www.codeforamerica.org/accelerator/">Code for America’s Civic Accelerator</a>, and joined by <a href="http://www.pointsoflight.org/civic-incubator/civic-accelerator">Points of Light</a> and <a href="http://tumml.org/">Tumml</a> among others, the EIR program seeks to offer another pathway to addressing civic challenges.  This is not an accelerator or incubator program, but rather a method for the City and County of San Francisco to formally match entrepreneurs working on products that serve or could serve government to various city agencies and departments.  It is our belief that creating a formal pathway can help these entrepreneurs more easily navigate the complexity of working in the public sector and bring better fit solutions to the challenges of government.  We applaud CfA's pioneering work in this space and hope our program spurs more entrepreneurs to work on civic problems.</p>
 
                 <h2>Why is the program unique?</h2>
 
