update MOCI branding

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href="css/bootstrap-ie7.css" rel="stylesheet">
     <![endif]-->
     <link href="css/style.css" rel="stylesheet">
-    <link href='http://fonts.googleapis.com/css?family=Lato|Montserrat|Fjalla+One' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Lato:300,400|Montserrat|Fjalla+One' rel='stylesheet' type='text/css'>
     <link rel="icon" type="image/ico" href="images/favicon.ico"/>
 
     <!--[if lt IE 9]>
@@ -58,13 +58,15 @@
 <body data-spy="scroll" data-target="#main-nav-cont" data-offset="100">
 
 <div class="header">
-    <div class="container" style="height: 100px; padding-top: 10px;" id="apply">
-        <a href="http://www.sfmayor.org" target="_blank"><img src="images/city_seal_white.png" width="80px;" class="img-responsive" style="float:left;"/></a>
-        <div class="brand-wrapper">
-            <div class="office-brand-lead">
-                An initiative of
+    <div class="container" id="apply">
+        <div class="brand-outer-wrapper">
+            <a href="http://innovatesf.com" target="_blank"><img src="/images/city_seal_white.png" width="65px;" style="float:left;"></a>
+            <div class="brand-wrapper">
+                <div class="office-brand-lead">
+                    An initiative of
+                </div>
+                <a href="http://innovatesf.com" target="_blank"><h1 class="office-brand">The Mayor's Office of Civic Innovation</h1></a>
             </div>
-            <h1 class="office-brand">The Mayor's Office of Civic Innovation</h1>
         </div>
 
     </div>
