--- a/mentor/rebecca-foster/index.html
+++ b/mentor/rebecca-foster/index.html
@@ -40,55 +40,9 @@
             <div class="col-sm-8 col-sm-offset-2">
             <h1 style="text-align: left;">Rebecca Foster</h1>
                 <img src="../../images/photo_rebecca_foster.jpg" width="200" class="pull-left bio-img" />
-                <p>Rebecca Foster is an advisor for the Mayor’s Office of Innovation for the City and County of San
-                    Francisco. Prior to her position at the Mayor’s Office, Rebecca worked as an investment banker in
-                    the Public Sector & Infrastructure group at Goldman Sachs for eight years.</p>
+                <p>Rebecca Foster is an advisor for the Mayor’s Office of Innovation for the City and County of San Francisco. She previously worked as an investment banker in the Public Sector & Infrastructure group at Goldman Sachs for the eight years. She has raised over $13 billion in capital for city and state governments, universities, non-profits, and utilities working in the New York and San Francisco offices. Rebecca’s experience ranges from managing multi-billion dollar debt offerings to prepare Florida for hurricanes to leading financings for unemployment insurance deficits post-recession for Idaho and Colorado. In 2008, Rebecca served as the chief of staff for her department, managing changes to the business’s structure and strategy around the financial crisis. Prior to Goldman, Rebecca worked in urban development consulting at HR&A Advisors, at the White House Office of Management and Budget, and as a river guide. She also spent a year as a Coro Fellow in New York where she reported for the Village Voice newspaper, developed a field-communication strategy for the NYC Parks Department, and ran local operations for a New Jersey congressional election. </p>
 
-                <p>Rebecca served as lead banker, project manager, or key team member on over $13 billion in lead
-                    managed financings for state and city governments, universities, and public power entities. She led
-                    the firm’s banking efforts for several Western states, and was responsible for developing and
-                    executing business strategy and managing state coverage teams. Rebecca led and project-managed
-                    transactions ranging from the State of Colorado’s successful $684M unemployment insurance financing
-                    to UC Regents’ $1.2B working capital borrowing to address pension-related costs. She also managed
-                    several debt and advisory related transactions with the Los Angeles Department of Water and Power as
-                    they moved to reduce their carbon footprint. While in New York, she played a key role in developing
-                    the relationship with Florida Citizens and the Florida Hurricane Catastrophe Fund, subsequently
-                    managing execution for over $6B of Florida’s debt issuance to prepare for hurricanes, including
-                    placing $3.5B in bonds during financial crisis. As part of her efforts she worked with Florida’s
-                    Governor and Treasurer to define best strategies to balance support of state’s economy by providing
-                    hurricane insurance while also managing risk to state’s capital position.</p>
-
-                <p>In 2008, Rebecca was selected for a one-year position as the Chief of Staff/Business Manager for the
-                    national Public Sector & Infrastructure Department. In this role she managed changes to the
-                    business’s structure and strategy around the financial crisis, handled day-to-day business
-                    operations, fielded press inquiries, and developed and presented analyses on business strategy,
-                    revenue growth, and organizational structure. She also managed staffing, reviews, and compensation
-                    planning for over 30 team-members during a period of dramatic headcount reduction.</p>
-
-                <p>Prior to Goldman, Rebecca worked in urban development, real-estate, and energy-related consulting at
-                    HR&A Advisors. In her work at HR&A, she managed the public-private redevelopment effort of the
-                    Anacostia and Southwest waterfronts in Washington, D.C., ran the energy-efficiency loan program for
-                    the New York State Energy Research and Development Authority, analyzed property tax code changes for
-                    the Real Estate Board of New York, and worked on public-private park development projects from
-                    Charlotte, North Carolina to Brooklyn, New York.</p>
-
-                <p>As a Coro Fellow in New York City she reported for the Village Voice newspaper, developed a
-                    field-communication strategy for the NYC Parks Department, and ran local operations for a New Jersey
-                    congressional election, among other projects. During graduate school Rebecca worked at the White
-                    House Office of Management and Budget focusing on urban development, and she started her career
-                    spending six summers as a river guide on rivers throughout the Western US.</p>
-
-                <p>Rebecca received her B.A. from Brown, earning Magna Cum Laude and Departmental honors for her thesis
-                    and being elected to Phi Beta Kappa. At Brown she captained the nationally-ranked ultimate Frisbee
-                    team and was a program coordinator at the Center for Public Service. Rebecca received her MBA from
-                    Stanford, where she ran the Public Management Initiative, published a paper on the business impacts
-                    of Climate Change, and was president of the Government and Politics club.</p>
-
-                <p>Rebecca is a currently an active board member of the Mission Preparatory School, a K-8 charter school
-                    serving some of San Francisco’s most underserved students, and ARTA, a non-profit whitewater rafting
-                    organization. Over the last ten years she has run several marathons and triathlons. She loves to
-                    explore the mountains, rivers, ocean, and San Francisco neighborhoods with her husband Doug and two
-                    boys.</p>
+                <p>She received her B.A. magna cum laude and Phi Beta Kappa from Brown, where she captained the nationally ranked ultimate Frisbee team, and her MBA from Stanford. Rebecca is an active board member of the Mission Preparatory School, a K-8 charter school serving some of San Francisco’s most underserved students, and ARTA, a non-profit whitewater rafting organization. She loves to explore the mountains, rivers, ocean, and San Francisco neighborhoods with her family.</p>
             </div>
         </div>
         <div class="row" style="text-align: center;">
