--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
 
                 <p>You have to be a full-time entrepreneur. However, your time commitment to the program is flexible depending on your needs and stage. We recognize that building a business requires having many demands on your time and we appreciate that. We will offer you a variety of resources and insights and it is up to you how much you’d like to benefit from them.</p>
 
-                <h2>What you mean when you say the product or service has to self-sustaining?</h2>
+                <h2>What do you mean when you say the product or service has to be self-sustaining?</h2>
                 <p>We want you to develop a successful product or service that is valuable to government here in San Francisco and across other cities, states and at the federal level. We expect you to ramp up your business through competitive and compelling offerings that governments consider purchasing because it has a measurable impact such as increased revenue, lower costs or enhanced productivity. </p>
             </div>
             <div class="divider"></div>
