add Ron to mentors

--- a/index.html
+++ b/index.html
@@ -436,6 +436,12 @@
 
                         <p>Dave Viotti</a></p>
                 </div>
+                <div class="col-md-2 col-sm-2">
+                    <a data-toggle="modal" href="mentor/ron-bouganim"><img src="images/photo_ron_bouganim.jpg   " width="100%"
+                                                                          class="img-responsive"/>
+
+                        <p>Ron Bouganim</a></p>
+                </div>
             </div>
         </div>
         <div class="divider"></div>
