--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
             <div class="Apply" style="text-align: center; margin: 0 auto">
                 <button name="" class="button">Apply Now</button>
-                <h3 class="deadline">by October 2, 2013<h3>
+                <h3 class="deadline">by Midnight Pacific, October 6, 2013<h3>
             </div>
         </div>
         <div class="photo-credit" style="float: right; color: #FFF; font-size:14px; text-shadow: #000000;">
@@ -355,7 +355,7 @@
                 <p>We will be reviewing applications on a rolling basis. It is in the applicant's best interest to apply
                     early. We will announce selected teams in early October, with the program beginning in mid-October
                     and wrapping up in mid-February.</p>
-                <p style="text-align: center; font-weight: bold;">Deadline is October 2, 2013</p>
+                <p style="text-align: center; font-weight: bold;">Deadline is Midnight Pacific, October 6, 2013</p>
 
                 <div class="Apply" style="text-align: center; margin: 0 auto">
                     <button class="button" style="float:none; margin-bottom:20px">Apply Now</button>
