update program desc

--- a/index.html
+++ b/index.html
@@ -175,9 +175,9 @@
                     solutions
                     in key areas such as data, mobile and cloud services, healthcare, education, transportation, energy
                     and infrastructure. The program expects to select 3 to 5 teams. The program will last 16 weeks from
-                    mid-October,
+                    November,
                     2013
-                    through mid-February, 2014.
+                    through March, 2014.
                 </p>
             </div>
             <div class="divider"></div>
@@ -352,8 +352,8 @@
                 <p>Selection will be made by SF EIR selection group composed of public and private sector leaders with
                     innovation, Fortune 500, startup and venture capital experience.</p>
 
-                <p>We will announce selected teams in October, with the program beginning in October
-                    and wrapping up in February.</p>
+                <p>We will announce selected teams in October, with the program beginning in November
+                    and wrapping up in March.</p>
                 <p style="text-align: center; font-weight: bold;">Deadline is Midnight Pacific, October 6, 2013</p>
 
                 <div class="Apply" style="text-align: center; margin: 0 auto">
