Update time of program

--- a/index.html
+++ b/index.html
@@ -352,8 +352,8 @@
                 <p>Selection will be made by SF EIR selection group composed of public and private sector leaders with
                     innovation, Fortune 500, startup and venture capital experience.</p>
 
-                <p>We will announce selected teams in October, with the program beginning in November
-                    and wrapping up in March.</p>
+                <p>We will announce selected teams in November, with the program beginning in early February
+                    and wrapping up in early June.</p>
                 <p style="text-align: center; font-weight: bold;">Deadline is Midnight Pacific, October 6, 2013</p>
 
                 <div class="Apply" style="text-align: center; margin: 0 auto">
