--- a/index.html
+++ b/index.html
@@ -671,7 +671,7 @@
 <!-- /section -->
 </div>
 <!-- /information -->
-<div id="application">
+<div id="interest">
     <div id="app-nav-cont" class="navbar navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
